--- a/airbnb.html
+++ b/airbnb.html
@@ -72,7 +72,7 @@
 
     <div class="bg-imageholder">
 
-<img src="img/lambo1.png" class="bg" alt="">
+<img src="img/eventspace.jpg" class="bg" alt="">
     </div>
 
     <div class ="comingsoon"> COMING SOON! </div>
