--- a/airbnb.html
+++ b/airbnb.html
@@ -71,7 +71,7 @@
 
     <div class="bg-imageholder">
 
-<img src="img/eventspace.jpg" class="bg" alt="">
+<img src="img/AIRBNB2.jpg" class="bg" alt="">
     </div>
 
     <div class ="comingsoon"> COMING SOON! </div>
