--- a/eventspace.html
+++ b/eventspace.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class ="comingsoon"> COMING SOON! </div>
-    <div class ="backtohome"> <a href="MOMVP.html" target="blank" class="backtohomeBtn"  title="View Vehicle Photos">
+    <div class ="backtohome"> <a href="index.html" target="blank" class="backtohomeBtn"  title="View Vehicle Photos">
        HOME
     </a> </div>
 
