--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ for (var i = 0; i < btns.length; i++) {
                                 <div class="frame">
                                         <div class="inner">
                                            
-                                                <img class="full resized" src="img/lambo14.png" alt="2019 BMW i8"  class = "img-responsive" width = "100%">
+                                                <img class="full resized" src="img/1-1.png" alt="2019 BMW i8"  class = "img-responsive" width = "100%">
                                           
                                         </div><!--div inner-->
                                 </div> <!--div frame-->
