--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ for (var i = 0; i < btns.length; i++) {
                                                          <a href="car-onephotos.html" target="blank" class="buttonreservephoto" id="photosbtn" title="View Vehicle Photos">
                                                                 Photos
                                                             </a> 
-                                                          <a href="contactForm.html" class="buttonreservephoto" id="reservebtn" title="View Vehicle Details">
+                                                          <a href="car-onephotos.html" class="buttonreservephoto" id="reservebtn" title="View Vehicle Details">
                                                                 Reserve Now
                                                             </a> 
                                                       </div><!--div btnsbox--> 
